2022-12-17 Fojtik Jaroslav  <JaFojtik@yandex.com>
        * VisualMagick/magick/magick_types.h.in
	Reverting from 16859. The change in 16860 completelly breaks
        compillation.

2022-12-17 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* tiff/port/libport_config.h Added missing file
	Documentation of libtiff upgraded.
        Upgraded libtiff to 4.5.0.


2022-12-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile_deep.tap: Add JXL tests for deep images.

	* coders/jxl.c: Fix grayscale writer error.  Eliminate use of
	deprecated functions.  Support 16-bits/sample.

2022-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pnm.c (ReadPNMImage): Do not promote gray images to
	PseudoClass unless the image dimensions make it worthwhile.

	* coders/gif.c (ReadGIFImage): Allocate cleared memory.  Remove
	two redundant memsets.

2022-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImages): Fix performance anomaly
	noticed with large image list.

	* coders/tiff.c (ReadTIFFImage): Move monitor for list to a better
	spot so that rows and columns are valid.

2022-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (png_error): Use a macro to report exceptions
	(rather than calling libpng's png_error()) for exceptions thrown
	from this module. This provides useful file/line information as
	well as allowing code analyzers to have a more accurate idea of
	what is going on.

	* magick/widget.c (MagickXFileBrowserWidget): Fix Coverity 382252
	"Wrong sizeof argument (SIZEOF_MISMATCH)".

	* coders/meta.c (parse8BIM): Fix Coverity 382245 "Incorrect
	expression (SIZEOF_MISMATCH)".
	(parse8BIMW): Fix Coverity 382250 "Incorrect expression
	(SIZEOF_MISMATCH)".

	* magick/widget.c (MagickXNoticeWidget): Fix Coverity 382254
	"Incorrect expression (SIZEOF_MISMATCH)."
	(MagickXFontBrowserWidget): Fix Coverity 382253 "Incorrect
	expression (SIZEOF_MISMATCH)".