@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020221217"
-#define public MagickPackageReleaseDate "snapshot-20221217"
+#define public MagickPackageVersionAddendum ".020221218"
+#define public MagickPackageReleaseDate "snapshot-20221218"
