@@ -37,6 +37,30 @@
 </div>
 
 <div class="document">
+<p>2022-12-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>fuzzing/oss-fuzz-build.sh: Remove xz --with-pic=yes option which
+now seems to annoy oss-fuzz build.</p></li>
+</ul>
+</blockquote>
+<dl class="simple">
+<dt>2022-12-17 Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</dt>
+<dd><ul class="simple">
+<li><p>VisualMagick/magick/magick_types.h.in
+Reverting from 16859. The change in 16860 completelly breaks
+compillation.</p></li>
+</ul>
+</dd>
+</dl>
+<p>2022-12-17 Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>tiff/port/libport_config.h Added missing file
+Documentation of libtiff upgraded.
+Upgraded libtiff to 4.5.0.</p></li>
+</ul>
+</blockquote>
 <p>2022-12-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
